test/resources/parser/failing/testOperandVal1.scala
object ValAsRightOperand {
  1 + val x: Int = 2; x
}